<resources>

    <!-- Application -->
    <string name="app_name">Imgur Gallery</string>

    <!-- Main Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    <!-- About Screen -->
    <string name="about_author_name">Fatemeh Emamianrizi</string>
    <string name="about_author_email">mm.ftmh@gamil.com</string>
    <string name="about_version">Version</string>
    <string name="about_last_update">Last Update</string>
    <string name="about_separator">:</string>

    <!-- Image Gallery Screen -->

    <!-- Image Screen -->
    <string name="image_up_votes">Up votes</string>
    <string name="image_down_votes">Down votes</string>
    <string name="image_score">Score</string>
    <string name="image_details">Details</string>
    <string name="image_description">Description</string>
    <string name="image_activity_title">Image Details</string>
    <string name="image_no_title">No Title</string>
    <string name="image_no_Description">No Description</string>


    <!-- Settings Screen-->
    <string name="setting_activity_title">Settings</string>


    <string name="images_setting_options_category_title">Images Setting Options</string>

    <string name="key_show_viral_images_preference">show_viral_images_preference</string>
    <string name="title_show_viral_images_preference">Show Viral Images</string>
    <string name="summary_show_viral_images_preference">Check if you like to see the viral images</string>

    <string name="key_section_preference">section_preference</string>
    <string name="title_section_preference">Section</string>
    <string name="summary_section_preference">Select the section form list</string>
    <string-array name="section_array">
        <item>hot</item>
        <item>top</item>
        <item>user</item>
    </string-array>

    <string name="key_sort_by_preference">sort_by_preference</string>
    <string name="title_sort_by_preference">Sort By</string>
    <string name="summary_sort_by_preference">Select the sort form list</string>
    <string-array name="sort_array">
        <item>viral</item>
        <item>top</item>
        <item>time</item>
        <item>rising</item>
    </string-array>

    <string name="key_window_preference">window_preference</string>
    <string name="title_window_preference">Window</string>
    <string name="summary_window_preference">Select the window form list</string>
    <string-array name="window_array">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
        <item>all</item>
    </string-array>

    <string name="ui_category_title">Display Options</string>

    <string name="key_list_type_preference">list_type_preference</string>
    <string name="title_list_type_preference">Image List Type</string>
    <string name="summary_list_type_preference">Select the Image List Type</string>
    <string-array name="list_type_array">
        <item>List</item>
        <item>Grid</item>
        <item>Staggered Grid</item>
    </string-array>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2</string>


</resources>
