<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.fatemeh.gallery.activities.ImageActivity"
    android:paddingBottom="@dimen/normal_gap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolBar"
            layout="@layout/main_tool_bar" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="@dimen/normal_gap"
            android:background="@color/blue_gray_400"
            android:padding="@dimen/small_gap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/normal_gap"
            android:layout_marginLeft="@dimen/normal_gap"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/small_gap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/image_description" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_gap"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_gap">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/small_gap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/image_details" />

                    <com.example.fatemeh.gallery.views.ImageDetailInfoLayout
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/image_score" />

                    <com.example.fatemeh.gallery.views.ImageDetailInfoLayout
                        android:id="@+id/ups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/image_up_votes" />

                    <com.example.fatemeh.gallery.views.ImageDetailInfoLayout
                        android:id="@+id/downs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/image_down_votes" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
